Set the initial dialog width when the sign-in email confirmation dialog is presented.

This CL sets the initial dialog width so that the dialog is correctly
centered when it first appers.

BUG=689995

Review-Url: https://codereview.chromium.org/2682123002
Cr-Commit-Position: refs/heads/master@{#449025}

Former-commit-id: 739de183ce3b03c365f0e5e47b30e1ea3ec1368a